--- a/views/inventory.ejs
+++ b/views/inventory.ejs
@@ -10,6 +10,7 @@
 </head>
 <body>
     <%- include('../partial/header.ejs'); %>
+    <%- include('../partial/errors_partial')%>
     <h1>INVENTORIES</h1>
     <form method="POST" action="/inventory">
         <input type="text" name="jenis" placeholder="jenis"> <br> <br>
