--- a/views/transaction.ejs
+++ b/views/transaction.ejs
@@ -10,6 +10,7 @@
 <body>
 
     <%- include('../partial/header')%>
+    <%- include('../partial/errors_partial')%>
     <br><br>
     <h1>Transaction</h1>
     <h5>Buat Transaksi Baru : </h5>
