--- a/partial/inventory_by_filter.ejs
+++ b/partial/inventory_by_filter.ejs
@@ -1,7 +1,8 @@
 <% if(typeof inventories !== 'undefined'){ %>
-    <select name="inventory_id" >
+    <select name="inventory_id" class="btn btn-secondary">
+        <option>--Pilih Jenis Alat--</option>
     <% inventories.forEach((elemen, idx)=>{ %>
-            <option value="<%- elemen.id %>"><%-elemen.jenis%></option>
+            <option value="<%- elemen.id %>"><%-`${elemen.jenis} --- S/N: ${elemen.serial_number}  `%></option>
     <% }) %>
     </select>
 <% } %>
