adding stock opname

--- a/partial/header.ejs
+++ b/partial/header.ejs
@@ -1,5 +1,5 @@
-<div class="btn-group" role="group" aria-label="Basic example">
-<form method="GET" action="/member" style="margin-left:400px;margin-bottom:10px;float:left">
+<div class="btn-group" role="group" aria-label="Basic example" id="header-partial">
+<form method="GET" action="/member" style="margin-left:300px;margin-bottom:10px;float:left">
     <input type="submit" value="MEMBER" class="btn btn-primary">
 </form>
 <form method="GET" action="/inventory" style="float:left" >
@@ -10,5 +10,8 @@
 </form>
 <form method="GET" action="/lihat_stok">
     <input type="submit" value="NGINTIP STOK :)" class="btn btn-primary">
+</form>
+<form method="GET" action="/stock_opname">
+    <input type="submit" value="OPNAME" class="btn btn-primary">
 </form>
 </div>
