--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Q-tha Rent - HOME</title>
 </head>
 <body>
     <h1 class="display-1" style="margin:200px;margin-left:30%;">Q-Tha Rent</h1>
