--- a/views/inventory.ejs
+++ b/views/inventory.ejs
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>inventories</title>
+    <title>Q-tha Rent - INVENTORY</title>
 </head>
 <body>
     <%- include('../partial/header.ejs'); %>
