--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,7 +14,7 @@
             <form method="POST" action="/auth" id="auth">
                 <%- include('../partial/errors_partial.ejs') %>
                 <input type="text" name="email" placeholder="email">
-                <input type="text" name="password" placeholder="password">
+                <input type="password" name="password" placeholder="password">
                 <input type="submit" value="SIGN IN">
             </form>
         <p>validasi member not null,validasi email uniq when create and update</p>
