--- a/views/member_update.ejs
+++ b/views/member_update.ejs
@@ -18,6 +18,7 @@
         <input type="text" value= "<%= member.no_telpon %>" placeholder="no_telpon" name="no_telpon"> <br> <br>
         <input type="text" value= "<%= member.email %>" placeholder="email" name="email"> <br> <br>
         <input type="text" value= "<%= member.role %>" placeholder="role" name="role"> <br> <br>
+        <input type="text"  placeholder="new password" name="password"> <br> <br>
         <input type="text" value= "<%= member.data_scan %>" placeholder="data_scan" name="data_scan"> <br> <br>
         <input type="submit" value="UPDATE">
     </form>
